# BattleshipSDLClient

./: .gitignore  CMakeLists.txt
include/: game.h  globals.h  load.h  network.h  scenes.h  ship.h  userstrings.h
resources/: missed_overlay.xcf  ship_body.xcf
src/: game.c  globals.c  load.c  main.c  network.c  scenes.c  ship.c
